--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@builderbot-plugins/openai-assistants": "^0.0.2",
     "@builderbot/bot": "1.2.2",
     "@builderbot/provider-baileys": "1.2.2",
-    "dotenv": "^16.4.5"
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/text-to-speech": "^5.4.0",
+    "@whiskeysockets/baileys": "6.5.0",
+    "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "uuid": "^10.0.0",
+    "openai": "4.38.3"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
